Replace power board schematic and fix image include

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,7 +1,8 @@
 \section{Appendix - Complete Schematics}
 \includepdf[angle=90]{base-station}
 \label{apx:base-station-sch}
-\includepdf[angle=90]{power-board}
+%\includepdf[angle=90]{power-board}
+\includegraphics[angle=90,height=8in]{PB_schematic}
 \label{apx:power-board-sch}
 \includepdf[angle=90]{control-module}
 \label{apx:control-module-sch}
